--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div>
-      <div class="container">
+      <div class="container" style="padding: 100px">
         <div class="column">
           <div
             id="S14"
@@ -106,7 +106,7 @@
             S25
           </div>
           <div
-            id="S25a"
+            id="S25A"
             class="columnImageContainer"
             style="--image: url(./assets/cyan.jpg)"
           >
@@ -319,35 +319,35 @@
               <div
                 id="M1"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M1
               </div>
               <div
                 id="M2"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M2
               </div>
               <div
                 id="M3"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M3
               </div>
               <div
                 id="M4"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M4
               </div>
               <div
                 id="M5"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M5
               </div>
@@ -361,35 +361,35 @@
               <div
                 id="M6"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M6
               </div>
               <div
                 id="M7"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M7
               </div>
               <div
                 id="M8"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M8
               </div>
               <div
                 id="M9"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M9
               </div>
               <div
                 id="M10"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M10
               </div>
@@ -399,77 +399,77 @@
               <div
                 id="M11"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M11
               </div>
               <div
                 id="M12"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M12
               </div>
               <div
                 id="M13"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M13
               </div>
               <div
                 id="M14"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M14
               </div>
               <div
                 id="M15"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M15
               </div>
               <div
                 id="M16"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M16
               </div>
               <div
                 id="M17"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M17
               </div>
               <div
                 id="M18"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M18
               </div>
               <div
                 id="M19"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M19
               </div>
               <div
                 id="M20"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M20
               </div>
               <div
                 id="M21"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M21
               </div>
@@ -514,7 +514,7 @@
               <div
                 id="M22"
                 class="imageContainer"
-                style="--image: url(./assets/black.jpg)"
+                style="--image: url(./assets/img-nexo-04.png)"
               >
                 M22
               </div>
@@ -1127,7 +1127,7 @@
             S61
           </div>
           <div
-            id="S61a"
+            id="S61A"
             class="columnImageContainer"
             style="--image: url(./assets/cyan.jpg)"
           >
@@ -1141,8 +1141,8 @@
             S60
           </div>
         </div>
-        <div class="flex-item">
-          <div class="flex-item">
+        <div class="flex-item" style="padding-left: 80px">
+          <div class="flex-item" style="padding-bottom: 100px">
             <select id="myList" onchange="select()" style="font-size: 24px">
               <option>Todos los distritos</option>
               <option>Miraflores</option>
@@ -1190,10 +1190,16 @@
             </select>
           </div>
           <div class="infoBox" style="float: left; font-size: 18px">
-            <img id="infoImg" src="" />
-            <h1 id="infoTitle" class="infoTitle"></h1>
-            <span id="infoBody" class="infoBoby"></span>
-            <div id="infoList" style="font-size: 18px"></div>
+            <img class="box" id="infoImg" src="" />
+            <div class="content">
+              <h1 id="infoTitle" class="infoTitle" style="font-size: 32px"></h1>
+              <span
+                id="infoBody"
+                class="infoBoby"
+                style="font-size: 32px"
+              ></span>
+              <div id="infoList" style="font-size: 18px"></div>
+            </div>
           </div>
         </div>
       </div>
