--- a/index.html
+++ b/index.html
@@ -591,11 +591,7 @@
               >
                 A15
               </div>
-              <div
-                id="Descanso"
-                class="imageContainer"
-                style="--image: url(./assets/white.png); color: black"
-              >
+              <div id="Descanso" class="imageContainer" style="color: black">
                 Zona de descanso
               </div>
               <div
@@ -1145,60 +1141,60 @@
           <div class="flex-item" style="padding-bottom: 100px">
             <select id="myList" onchange="select()" style="font-size: 24px">
               <option>Todos los distritos</option>
-              <option>Miraflores</option>
-              <option>Piura</option>
-              <option>San Isidro</option>
+              <option>Asia</option>
+              <option>Ate</option>
               <option>Barranco</option>
-              <option>Cayma</option>
-              <option>El Tallan</option>
-              <option>Lince</option>
-              <option>San Miguel</option>
-              <option>Jesus Maria</option>
-              <option>Santiago De Surco</option>
-              <option>Pueblo Libre</option>
-              <option>Magdalena Del Mar</option>
+              <option>Bellavista</option>
               <option>Breña</option>
-              <option>Surquillo</option>
-              <option>Chorrillos</option>
-              <option>San Borja</option>
-              <option>Punta Hermosa</option>
+              <option>Carabayllo</option>
+              <option>Catacaos</option>
+              <option>Cayma</option>
               <option>Cercado de lima</option>
               <option>Cerro Colorado</option>
-              <option>Tarapoto</option>
-              <option>Chiclayo</option>
-              <option>Pimentel</option>
-              <option>Catacaos</option>
-              <option>Independencia</option>
-              <option>La Victoria</option>
-              <option>Carabayllo</option>
-              <option>San Martin De Porres</option>
-              <option>San Clemente</option>
-              <option>Mala</option>
-              <option>Pachacamac</option>
-              <option>Ica</option>
-              <option>San Antonio</option>
-              <option>Reque</option>
               <option>Chaclacayo</option>
+              <option>Chiclayo</option>
               <option>Chilca</option>
-              <option>Asia</option>
-              <option>Paracas</option>
-              <option>San Bartolo</option>
-              <option>San Luis</option>
+              <option>Chorrillos</option>
+              <option>El Tallan</option>
+              <option>Ica</option>
+              <option>Independencia</option>
+              <option>Jesus Maria</option>
               <option>La Molina</option>
-              <option>Ate</option>
-              <option>Bellavista</option>
+              <option>La Victoria</option>
+              <option>Lince</option>
+              <option>Magdalena Del Mar</option>
+              <option>Mala</option>
+              <option>Miraflores</option>
+              <option>Pachacamac</option>
+              <option>Paracas</option>
+              <option>Pimentel</option>
+              <option>Piura</option>
+              <option>Pueblo Libre</option>
+              <option>Punta Hermosa</option>
+              <option>Reque</option>
+              <option>San Antonio</option>
+              <option>San Bartolo</option>
+              <option>San Borja</option>
+              <option>San Clemente</option>
+              <option>San Isidro</option>
+              <option>San Luis</option>
+              <option>San Martin De Porres</option>
+              <option>San Miguel</option>
+              <option>Santiago De Surco</option>
+              <option>Surquillo</option>
+              <option>Tarapoto</option>
             </select>
           </div>
           <div class="infoBox" style="float: left; font-size: 18px">
             <img class="box" id="infoImg" src="" />
             <div class="content">
-              <h1 id="infoTitle" class="infoTitle" style="font-size: 32px"></h1>
+              <h1 id="infoTitle" class="infoTitle" style="font-size: 24px"></h1>
               <span
                 id="infoBody"
                 class="infoBoby"
-                style="font-size: 32px"
+                style="font-size: 20px"
               ></span>
-              <div id="infoList" style="font-size: 18px"></div>
+              <div id="infoList" style="font-size: 16px"></div>
             </div>
           </div>
         </div>
