--- a/index.html
+++ b/index.html
@@ -356,7 +356,9 @@
                 class="imageContainer"
                 style="--image: url(./assets/red.jpg)"
               >
-                Zona de premios
+                <div style="font-size: 14px; padding-top: 16px">
+                  Zona de premios
+                </div>
               </div>
               <div
                 id="M6"
@@ -1139,7 +1141,7 @@
         </div>
         <div class="flex-item" style="padding-left: 80px">
           <div class="flex-item" style="padding-bottom: 100px">
-            <select id="myList" onchange="select()" style="font-size: 24px">
+            <select id="myList" onchange="select()" style="font-size: 16px">
               <option>Todos los distritos</option>
               <option>Asia</option>
               <option>Ate</option>
@@ -1186,16 +1188,9 @@
             </select>
           </div>
           <div class="infoBox" style="float: left; font-size: 18px">
-            <img class="box" id="infoImg" src="" />
-            <div class="content">
-              <h1 id="infoTitle" class="infoTitle" style="font-size: 24px"></h1>
-              <span
-                id="infoBody"
-                class="infoBoby"
-                style="font-size: 20px"
-              ></span>
-              <div id="infoList" style="font-size: 16px"></div>
-            </div>
+            <img id="infoImg" src="" />
+            <span id="infoBody" class="infoBoby" style="font-size: 20px"></span>
+            <div id="infoList" style="font-size: 16px"></div>
           </div>
         </div>
       </div>
